--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,91 @@
-ul{
+body,h1,h2,h3,ul,ol,li{
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+body{
+	background: #f1f1f1;
+	text-align: center;
+	font-size: 14px;
+}
+a{
+	text-decoration: none;
+	color: #333;
+}
+header{
+	border-bottom: 1px solid #ccc;
+	display: flex;
+}
+nav>ul{
+	display: flex;
+}
+nav>ul>li{
+	font-size: 20px;
+	padding: 0 10px;
+}
+header>h1{
+	margin:0 10px;
+}
+header li{
+	padding-right: 30px;
+	line-height: 56px;
+}
+.logo{
+	line-height: 56px;
+	padding: 0 30px;
+}
+.logo a:hover{
+	color: #fab;
+}
+footer{
+}
+main>h2{
+	margin-top: 25px;
+}
+.works{
+	display: flex;
+	justify-content: center;
+}
+.works .item{
+	width: 400px;
+	margin: 10px;
+}
+.item>a{
+	display: block;
+	padding: 10px;
+	color: #000;
+	background: #fff;
+}
+.item>a:hover{
+	background: #fad;
+	color: #fff;
+}
+.item h3{
+}
+.item img{
+	width: 100%;
+}
+.avatar img{
+	border-radius: 50%;
+	width: 180px;
+	border: 8px solid #f4d;
+}
+.about p{
+	font-size: 18px;
+}
+.about{
+	background: rgba(105,236,255,.3);
+	margin: auto;
+	width: 500px;
+	box-shadow: 10px 10px 10px rgba(0,0,0,.5);
+	border-radius: 20px;
+	text-align: left;
+	padding: 10px 0 10px 40px;
+}
+.info{
+	font-size: 18px;
+}
+/*ul{
 	list-style: none;
 	margin: 0;
 	padding: 0;
@@ -24,4 +111,4 @@ a{
 }
 a:hover{
 	color: #fd00ca;
-}
+}*/
