--- a/css/style.css
+++ b/css/style.css
@@ -117,10 +117,13 @@ main>h2{
 .info{
 	font-size: 18px;
 }
-.ant{
+.wlist{
 	flex-wrap: wrap;
 }
-.ant .item>a{
+.wlist .item img{
+	width: 100%;
+	height: 380px;
+	object-fit: cover;
 }
 @media screen and (max-device-width: 767px){
 	.works{
